# ocli

./: .gitignore  CHANGELOG.md  Makefile  README.md  dune  dune-project  ocli.opam
.github/: dependabot.yml
.github/workflows/: ci.yml
demo/: boiling.ml  demo.ml  demo_boiling.ml  demo_main.ml  dune
fmt/: dune  sexpfmt.ml
ppx_cross_match/: cross.ml  cross_test.ml  dune  ppx_cross_match.ml
qol/: dune  qol.ml  qol_test.ml  qol_unix.ml
rebase/: dune  explode_commit.ml  explode_commit.mli  newbase  rebase.ml  rebase_edit.ml  rebase_file_sample.txt  rebase_pass.ml  rebase_test.ml  rebase_test_inline.ml  usage.md
rebase/newbase.t/: newbase  run.t
slides/: dune  slides.ml  slides_demo.ml
tea/: dune  tea.mli
test/: dune  qol_test.ml  tty_test.ml
tools/: changelog.ml  dune  gitignorefmt.ml  sexpfmt.ml
tools/changelog.t/: run.t  test_changelog.md
tools/gitignorefmt.t/: run.t  test.gitignore
tools/sexpfmt.t/: run.t  test_sexp
tty/: components.ml  components.mli  components_test.ml  components_test_inline.ml  dune  editing_line.ml  editing_line.mli  editing_line_test.ml  tea.ml  tea.mli  tty.ml  tty.mli  tty_testing.ml
