(rule
 (target dune-project.formatted)
 (action
  (run %{dep:tools/sexpfmt.exe} %{dep:dune-project} dune-project.formatted)))

(rule
 (alias fmt)
 (action
  (diff dune-project dune-project.formatted)))

(rule
 (target .gitignore.formatted)
 (action
  (run %{dep:tools/gitignorefmt.exe} %{dep:.gitignore} .gitignore.formatted)))

(rule
 (alias fmt)
 (action
  (diff .gitignore .gitignore.formatted)))
