(lang dune 3.11)
(name ocli)
(generate_opam_files true)
(source (github NyuB/ocli))
(authors "Brice Decaestecker")
(maintainers "Brice Decaestecker")
(license OPEN_BAR_YO)
(documentation https://github.com/NyuB/ocli)
(package (name ocli) (synopsis "OCaml terminal interaction demo")
  (description
    "Minimal skeleton for terminal interaction using termios and terminal control sequences")
  (depends (ocaml (>= 5.0)) dune (alcotest :with-test)
    (ocamlformat :with-test) (ppx_expect :with-test) (sexplib :with-test))
  (tags (cli termios tty)))