(library
 (name rebase)
 (modules rebase)
 (libraries qol tea tty)
 (preprocess
  (pps ppx_cross_match)))

(library
 (name rebase_test_inline)
 (modules rebase_test_inline)
 (libraries rebase tea tty tty_testing)
 (inline_tests)
 (preprocess
  (pps ppx_expect)))

(executable
 (public_name rebase_edit)
 (name rebase_edit)
 (modules rebase_edit)
 (libraries qol_unix tea tty rebase))

(tests
 (names rebase_test)
 (modules rebase_test)
 (libraries rebase alcotest)
 (deps rebase_file_sample.txt))

(executable
 (public_name rebase_pass)
 (name rebase_pass)
 (modules rebase_pass)
 (libraries))

(cram
 (deps %{bin:rebase_pass}))
