(library
 (name tty)
 (modules tty)
 (libraries qol tea unix))

(library
 (name editing_line)
 (modules editing_line)
 (libraries tty))

(library
 (name tty_testing)
 (modules tty_testing)
 (libraries qol tty tea)
 (inline_tests)
 (preprocess
  (pps ppx_expect)))

(tests
 (names tty_test editing_line_test)
 (modules tty_test editing_line_test)
 (libraries alcotest tty editing_line))
