(library
 (name tty)
 (modules tty)
 (libraries qol tea unix))

(library
 (name components)
 (modules components)
 (libraries tty))

(library
 (name components_test_inline)
 (modules components_test_inline)
 (libraries components tty tty_testing)
 (inline_tests)
 (preprocess
  (pps ppx_expect)))

(library
 (name editing_line)
 (modules editing_line)
 (libraries tty))

(library
 (name tty_testing)
 (modules tty_testing)
 (libraries qol tty tea)
 (inline_tests)
 (preprocess
  (pps ppx_expect)))

(tests
 (names tty_test editing_line_test)
 (modules tty_test editing_line_test)
 (libraries alcotest tty editing_line))
