(library
 (name tty)
 (modules tty)
 (libraries qol tea unix))

(library
 (name components)
 (modules components)
 (libraries tty))

(library
 (name components_test_inline)
 (modules components_test_inline)
 (libraries components qol tty tty_testing)
 (inline_tests)
 (preprocess
  (pps ppx_expect)))

(library
 (name tty_testing)
 (modules tty_testing)
 (libraries qol tty tea)
 (inline_tests)
 (preprocess
  (pps ppx_expect)))

(tests
 (names tty_test components_test)
 (modules tty_test components_test)
 (libraries alcotest components qol tty))
